--- a/springjdbc/pom.xml
+++ b/springjdbc/pom.xml
@@ -12,9 +12,9 @@
 	<artifactId>springjdbc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springjdbc</name>
-	<description>Proyecto de spring con BD y consola</description>
+	<description>Proyecto de Spring con JdbcTemplate</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -22,6 +22,11 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
