--- a/UF2177-1/src/main/resources/application.properties
+++ b/UF2177-1/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/uf2177-1?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+spring.main.banner-mode=off
+logging.level.root=OFF
+
+
