--- a/usuarioservlets2/.project
+++ b/usuarioservlets2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>usuarioservlets2</name>
+	<name>usuarioservlets</name>
 	<comment></comment>
 	<projects>
 	</projects>
