--- a/concesionario/src/main/resources/application.properties
+++ b/concesionario/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/concesionario?serverTimezone=UTC
-spring.datasource.username=
+spring.datasource.username=root
 spring.datasource.password=
