--- a/concesionario/src/main/resources/application.properties
+++ b/concesionario/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/concesionario?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+spring.mvc.view.prefix=/WEB-INF/vistas/
+spring.mvc.view.suffix=.jsp
