Ya accede a la web. Falta acertar con los directorios de la cabecera

--- a/concesionario/src/main/resources/application.properties
+++ b/concesionario/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.mvc.view.prefix=/WEB-INF/vistas/
 spring.mvc.view.suffix=.jsp
+spring.thymeleaf.prefix=/WEB-INF/vistas/
+spring.thymeleaf.suffix=.jsp
