--- a/concesionario/src/main/resources/application.properties
+++ b/concesionario/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 #spring.jpa.hibernate.ddl-auto=update
+#spring.mvc.view.prefix=webapp/WEB-INF/vistas/
+#spring.mvc.view.suffix=.html
+#spring.thymeleaf.prefix=/WEB-INF/vistas/
+#spring.thymeleaf.suffix=.jsp
+
 spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/concesionario?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-spring.mvc.view.prefix=/WEB-INF/vistas/
-spring.mvc.view.suffix=.jsp
-spring.thymeleaf.prefix=/WEB-INF/vistas/
-spring.thymeleaf.suffix=.jsp
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto = update
+
+
