--- a/concesionario/yaml/Concesionario.yaml
+++ b/concesionario/yaml/Concesionario.yaml
@@ -9,16 +9,16 @@ tags:
 - name: "coche"
   description: "Coches del concesionario"
 - name: "marca"
-  description: "MArcas de los coches"
+  description: "Marcas de los coches"
 
 
 paths:
-  /curso:
+  /marcas:
     get:
       tags:
-      - "curso"
-      summary: "Listado de cursos"
-      description: "Listado de todos los cursos"
+      - "marca"
+      summary: "Listado de marcas"
+      description: "Listado de todos las marcas"
       operationId: "obtenerTodos"
       produces:
       - "application/xml"
@@ -33,40 +33,15 @@ paths:
         "404":
           description: "No se encuentra"
 
-  /cursos/{id}:
-    get:
-      tags:
-      - "curso"
-      summary: "Encontrar curso por id"
-      description: "Returns a single pet"
-      operationId: "obtenerPorId"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "id"
-        in: "path"
-        description: "id del curso"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses:
-        "200":
-          description: "soperación exitosa"
-          schema:
-            $ref: "/cursos/{1}"
-        "400":
-          description: "Id no valida"
-        "404":
-          description: "Curso no encontrado"
 
 
 
-  /resenya:
+
+  /coche:
     post:
       tags:
-      - "resenya"
-      summary: "Insertar reseña"
+      - "coche"
+      summary: "Insertar coche"
       description: ""
       operationId: "insertar"
       produces:
@@ -78,91 +53,62 @@ paths:
           schema:
             $ref: "/resenyas"
         "400":
-          description: "Reseña invalida"
+          description: "Coche invalido"
           
-  /resenya/{id}:
-    put:
+  /coche/{id}:
+    get:
       tags:
-      - "resenya"
-      summary: "Modifica una resena existente"
-      description: ""
-      operationId: "modificar"
-      consumes:
-      - "application/json"
-      - "application/xml"
+      - "coche"
+      summary: "Encontrar coches por id de marca"
+      description: "Devuelve coches por marca"
+      operationId: "obtenerPorMarca"
       produces:
       - "application/xml"
       - "application/json"
       parameters:
       - name: "id"
         in: "path"
-        description: "The name that needs to be fetched. Use user1 for testing. "
+        description: "id de la marca del coche"
         required: true
-        type: "integer"
-      responses:
-        "400":
-          description: "ID no valido"
-        "404":
-          description: "Reseña no encontrada"
-        "405":
-          description: "Excepcion de validación"
- 
-          
-    delete:
-      tags:
-      - "resenya"
-      summary: "Borrar una reseña por su ID"
-      description: "Requiere valores enteros positivos"
-      operationId: "borrar"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "id"
-        in: "path"
-        description: "ID de la reseña que se quiere borrar"
-        required: true
-        type: "integer"
-        minimum: 1.0
+        type: "long"
         format: "int64"
       responses:
+        "200":
+          description: "operación exitosa"
+          schema:
+            $ref: "/coches/{1}"
         "400":
-          description: "ID ivalida"
+          description: "Id no valida"
         "404":
-          description: "Reseña no encontrada"
-
-
+          description: "Coches de la marca no encontrados"
+ 
 
 definitions:
   Coche:
     type: "object"
     properties:
-      codigo:
-        type: "integer"
+      id:
+        type: "long"
         format: "int64"
-      nombre:
+      modelo:
         type: "string"
-      identificador:
+      matricular:
         type: "string"
-      nHoras:
-        type: "integer"
+      marca_id:
+        type: "long"
         format: "int64"
     xml:
       name: "Coche"
+      
   Marca:
     type: "object"
     properties:
-      codigo:
-        type: "integer"
+      id:
+        type: "long"
         format: "int64"
-      descripcion:
+      nombre:
         type: "string"
 
-      alumnoCodigo:
-        type: "integer"
-        format: "int32"
-      cursoCodigo:
-        type: "integer"
-        format: "int32"
+
     xml:
       name: "Marca"
