--- a/concesionario/pom.xml
+++ b/concesionario/pom.xml
@@ -64,6 +64,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+		
+		<dependency>
+    		<groupId>com.itextpdf</groupId>
+    		<artifactId>itextpdf</artifactId>
+    		<version>5.4.0</version>
+		</dependency>
+		
 
 	</dependencies>
 
