--- a/concesionario/src/main/resources/application.properties
+++ b/concesionario/src/main/resources/application.properties
@@ -4,10 +4,17 @@
 #spring.thymeleaf.prefix=/WEB-INF/vistas/
 #spring.thymeleaf.suffix=.jsp
 
-spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
+  
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/concesionario?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.data.rest.base-path=api
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
