--- a/servidorrestspringdatajpa/src/main/resources/application.properties
+++ b/servidorrestspringdatajpa/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ejemplojpa?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=
 
 spring.data.rest.base-path=api
