--- a/concesionario/.classpath
+++ b/concesionario/.classpath
@@ -28,6 +28,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Curso JAVA/eclipse/jee-2020-09/eclipse/itextpdf-5.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/amont/eclipse/jee-2020-092/eclipse/itextpdf-5.4.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
