--- a/concesionario/.classpath
+++ b/concesionario/.classpath
@@ -20,6 +20,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -28,9 +29,9 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/amont/eclipse/jee-2020-092/eclipse/itextpdf-5.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/amont/eclipse/jee-2020-092/eclipse/JavaCEWSclient/Jace.jar"/>
-	<classpathentry kind="lib" path="C:/Users/amont/eclipse/jee-2020-092/eclipse/JavaCEWSclient/Jace_t.jar"/>
-	<classpathentry kind="lib" path="C:/Users/amont/eclipse/jee-2020-092/eclipse/JavaCEWSclient/p8cel10n.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Curso JAVA/eclipse/jee-2020-09/eclipse/JavaCEWSclient/Jace.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Curso JAVA/eclipse/jee-2020-09/eclipse/JavaCEWSclient/Jace_t.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Curso JAVA/eclipse/jee-2020-09/eclipse/JavaCEWSclient/p8cel10n.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Curso JAVA/eclipse/jee-2020-09/eclipse/itextpdf-5.4.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
