--- a/concesionario/.classpath
+++ b/concesionario/.classpath
@@ -33,5 +33,6 @@
 	<classpathentry kind="lib" path="C:/Users/Curso JAVA/eclipse/jee-2020-09/eclipse/JavaCEWSclient/Jace_t.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Curso JAVA/eclipse/jee-2020-09/eclipse/JavaCEWSclient/p8cel10n.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Curso JAVA/eclipse/jee-2020-09/eclipse/itextpdf-5.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Curso JAVA/eclipse/jee-2020-09/eclipse/ceutil.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
